--- a/index.html
+++ b/index.html
@@ -137,10 +137,8 @@
         <button type="submit">Enviar minha opinião</button>
     </section>
 
-    <footer>
-        <img src="./img/Instagram-Icon.png" alt="icone instagram" height="15" width="15">
+    <footer class="footer">
         <span>Instagram da banda <a href="https://www.youtube.com/channel/UCDAXusYwRJpiSP2CHnXnVnw">aqui</a></span>
-        <img src="./img/f2ea1ded4d037633f687ee389a571086-logo-do-cone-do-youtube.png" alt="icone instagram" height="15" width="15">
         <span>Youtube da banda <a href="https://www.youtube.com/channel/UCDAXusYwRJpiSP2CHnXnVnw">aqui</a></span>
     </footer>
 
